# camera_calibration

./: .gitignore  .gitmodules  README.md  environment.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  test.py
.github/workflows/: build_latex.yml  pytest.yml  tests.yml  unittest.yml
calibration/: __init__.py
calibration/augmentations/: augmentations.py
calibration/benchmark/: benchmark.py  benchmark_result.py  calib.py  eval.py  features.py  test_benchmark.py
calibration/feature_detector/: checkerboard.py  test_libcbdetect.py  visualization.py
calibration/feature_refiner/: classifier.py  refine.py  visualization.py
calibration/features/: checkerboard.py  test_libcbdetect.py  visualization.py
calibration/projector/: board.py  camera.py  projector.py  test_projector.py
calibration/simulator/: board.py  board_test.py  camera.py  helpers.py  simul.py  simulator_test.py  test_simulator.py  types.py
calibration/solver/: closed_form.py  extrinsics.py  intrinsics.py  reproject.py  solve.py  test_solver.py  test_solvers.py
data/BabelCalib/: .gitignore  README.md
notebooks/: 1_Proj and Backproj custom camera.ipynb  1_Proj and Backproj.ipynb  1_backprojection.ipynb  2_projection.ipynb  3_Solver Scaramuzza.ipynb  4_Lambdas range.ipynb  BabelCalib results.ipynb  DS_check.ipynb  Distortion_center.ipynb  EvalOverlayed.ipynb  EvalPruned.ipynb  Feature detection.ipynb  Features.ipynb  Proj and Backproj.ipynb  Simulator.ipynb  Solver Scaramuzza.ipynb  Solver eq10.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Visualization.ipynb  backprojection.ipynb  projection.ipynb  solver.ipynb
notebooks/.virtual_documents/: Solver eq10.ipynb
paper/: notes.md  paper.tex  poster.tex  presentation.tex  references.bib
paper/Chapters/: Chapter1.tex  Chapter2.tex  Chapter3.tex  Chapter4.tex  Chapter5.tex  Chapter6.tex  Plan.tex
paper/data/: example_board.txt  (+10 more)
(+3007 files in other folders)
