[project]
name = "camera_calibration"
version = "0.0.1"
description="Camera calibration and feature detection"
readme = "README.md"
authors = [
  { name = "Andrii Stadnik", email = "stadnikandriy1@gmail.com" },
]
requires-python = ">=3.7"

[tool.pyright]
# include = ["src"]
exclude = ["calibration/feature_detector/libcbdetect/external/"]

[tool.ruff]
exclude = ["calibration/feature_detector/libcbdetect/external/"]
