[project]
name = "camera_calibration"
version = "0.0.1"
description="Camera calibration and feature detection"
readme = "README.md"
authors = [
  { name = "Andrii Stadnik", email = "stadnikandriy1@gmail.com" },
]
requires-python = ">=3.7"

[tool.pyright]
# include = ["src"]
exclude = ["src/feature_detector/libcbdetect/external/"]

[tool.ruff]
exclude = ["src/feature_detector/libcbdetect/external/"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
camera_calibration = { path = ".", editable = true }
libcbdetect = { path = "./src/feature_detector/libcbdetect", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipython = ">=8.24.0,<8.25"
pandas = ">=2.2.2,<2.3"
ipdb = ">=0.13.13,<0.14"
jupyterlab-katex = ">=3.4.0,<3.5"
pillow = ">=10.3.0,<10.4"
ipywidgets = ">=8.1.2,<8.2"
icecream = ">=2.1.3,<2.2"
dacite = ">=1.8.1,<1.9"
numba = ">=0.59.1,<0.60"
pybind11 = ">=2.12.0,<2.13"
ruff = ">=0.4.4,<0.5"
jupyterlab-lsp = ">=5.1.0,<5.2"
plotly = ">=5.22.0,<5.23"
opencv = ">=4.9.0,<4.10"
python-lsp-server = ">=1.11.0,<1.12"
jupyterlab-git = ">=0.50.0,<0.51"
scikit-learn = ">=1.4.2,<1.5"
jaxopt = ">=0.8.3,<0.9"
jupyterlab_code_formatter = ">=2.2.1,<2.3"
numpy = ">=1.26.4,<1.27"
scipy = ">=1.13.0,<1.14"
tqdm = ">=4.66.4,<4.67"
optax = ">=0.2.2,<0.3"
pytest = ">=8.2.0,<8.3"
